[gd_scene load_steps=6 format=3 uid="uid://ca5ft5odhhsa2"]

[ext_resource type="Script" path="res://Scripts/levels/level1/dog.gd" id="1_8as6q"]
[ext_resource type="Texture2D" uid="uid://hl43ymto7tof" path="res://Assets/level1/dog/leg.png" id="1_xj5jr"]
[ext_resource type="Texture2D" uid="uid://7jx5lv82dbb" path="res://Assets/level1/dog/body.png" id="2_o4ekt"]
[ext_resource type="Texture2D" uid="uid://crgah1o3boeq6" path="res://Assets/level1/dog/head.png" id="3_etsba"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dofni"]
size = Vector2(156, 88)

[node name="Dog" type="Node2D"]
z_index = 96
z_as_relative = false
texture_filter = 1
script = ExtResource("1_8as6q")

[node name="Leg1" type="Sprite2D" parent="."]
position = Vector2(-37, 24)
rotation = 0.265286
texture = ExtResource("1_xj5jr")
centered = false
offset = Vector2(-32, -16)

[node name="Leg2" type="Sprite2D" parent="."]
position = Vector2(-20, 24)
rotation = -0.202026
texture = ExtResource("1_xj5jr")
centered = false
offset = Vector2(-32, -16)

[node name="Leg3" type="Sprite2D" parent="."]
position = Vector2(39, 25)
rotation = 0.308634
texture = ExtResource("1_xj5jr")
centered = false
offset = Vector2(-32, -16)

[node name="Leg4" type="Sprite2D" parent="."]
position = Vector2(51, 25)
rotation = -0.523971
texture = ExtResource("1_xj5jr")
centered = false
offset = Vector2(-32, -16)

[node name="Body" type="Sprite2D" parent="."]
texture = ExtResource("2_o4ekt")

[node name="Head" type="Sprite2D" parent="."]
position = Vector2(-57, -14)
texture = ExtResource("3_etsba")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-11, 1)
shape = SubResource("RectangleShape2D_dofni")

[connection signal="body_entered" from="Area2D" to="." method="_on_obstacle_entered"]
